feat: Add multi-provider VoIP support and comprehensive documentation
- Implemented universal VoIP adapter pattern for Twilio, Vonage, and Bandwidth
- Added auto-detection of VoIP provider from webhook format
- Created BaseVoipAdapter with provider-specific implementations
- Added VoipAdapterFactory for provider routing and management
- Updated voice-routes.ts to use adapter pattern for /api/voice/incoming

Documentation:
- Added VOICE_ENDPOINTS_ARCHITECTURE.md - Complete UI vs VoIP comparison
- Added VOIP_PROVIDER_CONFIGURATION.md - Setup guide for all providers
- Added VOIP_MULTI_PROVIDER_SUPPORT.md - Implementation summary
- Updated README.md with Java 21 upgrade notes and VoIP documentation links
- Updated OpenAPI specs (backend-node and docs) with multi-provider endpoints

Features:
- Provider-agnostic Java backend (same STT/TTS/LLM for all providers)
- TwiML XML generation for Twilio
- NCCO JSON generation for Vonage
- BXML XML generation for Bandwidth
- Webhook signature validation for each provider
- Single universal endpoint: /api/voice/incoming

Breaking Changes: None (backward compatible with existing Twilio setup)